--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
   port: 3306
   username: root
   password: dev
-  database: rails_on_web_dev
+  database: cdbokang
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -27,19 +27,19 @@ test:
   encoding: utf8
   reconnect: false
   pool: 5
-  host: 127.0.0.1
+  host: localhost
   port: 3306
   username: root
   password: dev
-  database: rails_on_web_test
+  database: cdbokang
 
 production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
   pool: 5
-  host: 127.0.0.1
+  host: localhost
   port: 3306
   username: root
   password: dev
-  database: rails_on_web
+  database: cdbokang
